button size to large

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body class="bg-dark">
     <h1 class="text-light">BLOK 1A DEEL 1A</h1>
-    <a class="btn btn-primary" href="https://p2l9envo8ru.typeform.com/to/HaXykj9d">les 1a</a>
+    <a class="btn btn-primary btn-lg" href="https://p2l9envo8ru.typeform.com/to/HaXykj9d">les 1a</a>
     <footer>image by flaticon</footer>
 </body>
 </html>
